# teo-simox-models

./: CMakeLists.txt  CONTRIBUTING.md  README.md  README.md~
doc/: CoM simox.csv  MASAS TEO.xlsx  Propiedades TEO solidwerks.odt  TEODynamicInformation.md  groups.dox  main.dox  teo-center-of-masses.csv  teo-openrave-models-install.md
simox/: CMakeLists.txt
simox/teo/: CoM simox.ods  MASAS TEO.xlsx  TEOSimox.xml
simox/teo/xmlfiles/: BodySimox.xml  HeadSimox.xml  LefLegSimox.xml  LeftArmSimox.xml  LeftHandSimox.xml  RightArmSimox.xml  RightHandSimox.xml  RightLegSimox.xml
simox/teo/xmlfiles/collisionModels/: link-0.stl  link-1.stl  link-10.stl  link-11.stl  link-12.stl  link-13.stl  link-14.stl  link-15.stl  link-16.stl  link-17.stl  link-18.stl  link-19.stl  link-2.stl  link-20.stl  link-21.stl  link-22.stl  link-23.stl  link-24.stl  link-25.stl  link-26.stl  link-27.stl  link-28.stl  link-3.stl  link-4.stl  link-5.stl  link-6.stl  link-7.stl  link-8.stl  link-9.stl
simox/teo/xmlfiles/models/hands/: full_wrist.stl  index_proximal_phalanx.stl  thumb_proximal_phalanx.stl
teo/: TEOSimox.xml
teo/xmlfiles/: BodySimox.xml  HeadSimox.xml  LefLegSimox.xml  LeftArmSimox.xml  LeftHandSimox.xml  RightArmSimox.xml  RightHandSimox.xml  RightLegSimox.xml
teo/xmlfiles/collisionModels/: full_wrist_collision.stl  index_distal_phalanx_collision.stl  index_proximal_phalanx_collision.stl  link-0.stl  link-1.stl  link-10.stl  link-11.stl  link-14.stl  link-15.stl  link-18.stl  link-2.stl  link-21.stl  link-23.stl  link-26.stl  link-28.stl  link-3.stl  link-6.stl  link-7.stl  (+3 more)
(+2 files in other folders)
